--- a/mysite/portal/templates/portal/index.html
+++ b/mysite/portal/templates/portal/index.html
@@ -1,8 +1,13 @@
 <HTML>
     <HEAD>
-        <TITLE>LOL</TITLE>
+        <TITLE>SurveyMonkey Sample</TITLE>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     </HEAD>
     <BODY>
-        {{title}}
+    	<H2 class="text-center">Age of the Respondents</H2>
+    	<div class = "text-center">
+    		<iframe frameborder="0" width="500" height="500" scrolling="no" src={{title}}>
+			</iframe>
+		</div>
     </BODY>
 </HTML>
