disabled auto_open

--- a/mysite/portal/templates/portal/index.html
+++ b/mysite/portal/templates/portal/index.html
@@ -4,7 +4,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     </HEAD>
     <BODY>
-    	<H2 class="text-center container">Age of the Respondents</H2>
+    	<H2 class="text-center container">{{survey_title}}</H2>
     	<div class = "text-center">
     		<iframe frameborder="0" width="500" height="500" scrolling="no" src={{url}}>
 			</iframe>
