--- a/mysite/portal/templates/portal/index.html
+++ b/mysite/portal/templates/portal/index.html
@@ -4,10 +4,26 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     </HEAD>
     <BODY>
-    	<H2 class="text-center container">{{survey_title}}</H2>
-    	<div class = "text-center">
-    		<iframe frameborder="0" width="500" height="500" scrolling="no" src={{url}}>
+    	<H2 class="text-center">{{survey_title}}</H2>
+    	
+
+    		{% for item in plots %}
+    		<div class = "col-md-6">
+	    		<iframe frameborder="0" width="500" height="500" scrolling="no" src={{item.url}}>
+				</iframe>
+				<H2 class="text-center">{{item.question_text}}</H2>
+			</div>
+    		{% endfor %}
+<!-- 
+
+    		
+			<iframe frameborder="0" width="500" height="500" scrolling="no" src={{gender_url}}>
 			</iframe>
-		</div>
+			<iframe frameborder="0" width="500" height="500" scrolling="no" src={{exercise_url}}>
+			</iframe>
+			<iframe frameborder="0" width="500" height="500" scrolling="no" src={{often_exercise_url}}>
+			</iframe> -->
+
+		
     </BODY>
 </HTML>
